--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-howler": "^5.1.0",
     "react-icons": "^4.2.0",
     "react-native": "^0.64.2",
     "react-redux": "^7.2.4",
