--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.4",
-    "@egjs/react-flicking": "^4.1.0",
+    "@egjs/flicking-plugins": "^4.1.0",
+    "@egjs/react-flicking": "^4.1.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
