--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.2.0",
     "react-native": "^0.64.2",
     "react-redux": "^7.2.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
